--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -25,13 +25,17 @@
           <tr>
             <th scope="col">Short URL ID</th>
             <th scope="col">Long URL</th>
+            <th scope="col">Delete</th>
           </tr>
         </thead>
         <tbody>
           <% for (let id in urlDatabase) { %>
             <tr>
-              <td><a href="/urls/<%= id %>"><%= id %></a></td>
-              <td><%= urlDatabase[id] %></td>
+              <form method="POST" action="/urls/<%= id%>/delete">
+                <td><a href="/urls/<%= id %>"><%= id %></a></td>
+                <td><%= urlDatabase[id] %></td>
+                <td><button type="submit" class="btn btn-outline-danger">Delete</button></td>
+              </form>
             </tr>
           <% } %>
         </tbody>
