--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -25,15 +25,17 @@
           <tr>
             <th scope="col">Short URL ID</th>
             <th scope="col">Long URL</th>
+            <th scope="col">Edit</th>
             <th scope="col">Delete</th>
           </tr>
         </thead>
         <tbody>
           <% for (let id in urlDatabase) { %>
             <tr>
+              <td><a href="/urls/<%= id %>"><%= id %></a></td>
+              <td><%= urlDatabase[id] %></td>
+                <td><a href="/urls/<%= id%>/"><button class="btn btn-outline-primary">Edit</button></a></td>
               <form method="POST" action="/urls/<%= id%>/delete">
-                <td><a href="/urls/<%= id %>"><%= id %></a></td>
-                <td><%= urlDatabase[id] %></td>
                 <td><button type="submit" class="btn btn-outline-danger">Delete</button></td>
               </form>
             </tr>
