added a form for username input

--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -18,5 +18,10 @@
         <a class="nav-item nav-link" href="/urls/new">Create New URL</a>
       </div>
     </div>
+      <form method="POST" action="/login" class="form-inline">
+        <input type="text" name="username" placeholder="Username" class="form-control">
+        <button type="submit" class="btn btn-outline-success">Login</button>
+      </form>
+    </div>
   </nav>
 </header>
