--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -18,6 +18,7 @@
         <a class="nav-item nav-link" href="/urls/new">Create New URL</a>
       </div>
     </div>
+    <h3><%= username%></h3>
       <form method="POST" action="/login" class="form-inline">
         <input type="text" name="username" placeholder="Username" class="form-control">
         <button type="submit" class="btn btn-outline-success">Login</button>
