--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -18,11 +18,17 @@
         <a class="nav-item nav-link" href="/urls/new">Create New URL</a>
       </div>
     </div>
-    <h3><%= username%></h3>
-      <form method="POST" action="/login" class="form-inline">
-        <input type="text" name="username" placeholder="Username" class="form-control">
-        <button type="submit" class="btn btn-outline-success">Login</button>
+    <% if (username){ %>
+      <form method="POST" action="/logout" class="form-inline">
+        <p style="margin: 1em;">Logged in as: <%= username%></p>
+        <button type="submit" class="btn btn-outline-success">Logout</button>
       </form>
+      <% } else {%>
+        <form method="POST" action="/login" class="form-inline">
+          <input type="text" name="username" placeholder="Username" class="form-control" style="width: 300px; margin: 1em">
+          <button type="submit" class="btn btn-outline-success">Login</button>
+          </form>
+      <% }%>
     </div>
   </nav>
 </header>
