--- a/views/urls_show.ejs
+++ b/views/urls_show.ejs
@@ -18,11 +18,11 @@
       <div class="card-body">
         <h5 class="card-title">TinyURL for: <%= longURL %></h5>
         <p class="card-text">
-          Short URL ID: <a href="/u/<%= id %>"><%= id %></a>
+          Short URL ID: <a href="/u/<%= shortURL %>"><%= shortURL %></a>
         </p>
       </div>
       <div class="card-footer text-muted">
-        <form action='/urls/<%= id%>' method="post">
+        <form action='/urls/<%= shortURL%>' method="post">
           <div class="form-group mb-2">
             <h3>Edit</h3>
             <label for = "newURL"> New URL: </label>
