--- a/views/register.ejs
+++ b/views/register.ejs
@@ -19,14 +19,19 @@
   </head>
 
   <body>
-    <nav class="navbar navbar-dark bg-success"><h3>Register for TinyApp</h3></nav>
+    <%- include('partials/_header') %>
     <main style="margin: 1em;">
+      <h1>Create Account</h1>
       <form action="/register" method="post">
-        <label for = "email"> Email: </label>
-        <input type="email" name="email" placeholder="Email">
-        <label for = "password"> Password: </label>
-            <input type="password" name="password" placeholder="password">
-            <button type="submit" class="btn btn-primary">Submit</button>
+        <div class="form-group mb-2">
+          <label for = "email"> Email: </label>
+          <input type="email" name="email" placeholder="Email" style="width: 300px;" class="form-control">
+        </div>
+        <div class="form-group mb-2">
+          <label for = "password"> Password: </label>
+          <input type="password" name="password" placeholder="password" style="width: 300px;" class="form-control">
+        </div>
+        <button type="submit" class="btn btn-primary">Submit</button>
       </form>
     </main>
     <!-- Bootstrap JS -->
