--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -30,12 +30,12 @@
           </tr>
         </thead>
         <tbody>
-          <% for (let shortURL in urlDatabase) { %>
+          <% for (let url in urls) { %>
             <tr>
-              <td><a href="/urls/<%= shortURL %>"><%= shortURL%></a></td>
-              <td><%= urlDatabase[shortURL] %></td>
-                <td><a href="/urls/<%= shortURL%>/"><button class="btn btn-outline-primary">Edit</button></a></td>
-              <form method="POST" action="/urls/<%= shortURL%>/delete">
+              <td><a href="/urls/<%= url%>"><%= url%></a></td>
+              <td><%= urls[url].longURL %></td>
+                <td><a href="/urls/<%= url%>/"><button class="btn btn-outline-primary">Edit</button></a></td>
+              <form method="POST" action="/urls/<%= url%>/delete">
                 <td><button type="submit" class="btn btn-outline-danger">Delete</button></td>
               </form>
             </tr>
